# media-sessions

./: $null  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  ENABLE_GITHUB_PAGES.md  GITHUB_PUBLISH.md  HOW_TO_PUBLISH.md  LICENSE-MIT  PUBLISHING.md  PUBLISHING_GUIDE.md  PUBLISH_DOCS_GUIDE.md  PUBLISH_WITHOUT_MDBOOK.md  QUICKSTART.md  QUICK_PUBLISH.md  README.md  READY_TO_PUBLISH.md  SECURITY.md  USAGE_EXAMPLE.md  book.toml  c-api.html  faq.html  print.html  publish-docs.bat  publish-docs.ps1  publish-docs.sh  publish-simple.ps1  quick-publish.bat  rustfmt.toml  searcher-c2a407aa.js  searchindex-2bc11993.js  searchindex-31515e20.js  setup-and-publish.ps1  setup-and-publish.sh  toc.html  КАК_ОПУБЛИКОВАТЬ.md
.github/workflows/: ci.yml  deploy-docs.yml  deploy-simple.yml  enable-pages.yml
benches/: media_sessions.rs
c-api/: API_REFERENCE.md  README.md  csharp_example.cs  media_sessions_c.h  python_example.py
docs/: COMPLETE.md  DEPLOY.md  INDEX.md  OVERVIEW.md  PUBLISHING_GUIDE.md  README.md  USAGE.md  book.en.toml  book.toml  book.toml.bak  create-en-stubs.bat
docs/book/: 404.html  quickstart.html  searcher-c2a407aa.js  searchindex-8209588c.js  toc-26c5e6ad.js  toc-4de62791.js  toc.html
docs/book/guides/: error-handling.html  integration.html  performance.html  troubleshooting.html
docs/book/languages/: c-cpp.html  nodejs.html  python.html
docs/book/rust-api/: events.html  media-info.html  media-sessions.html  playback-status.html  repeat-mode.html
docs/output/ru/: c-api.html  faq.html  index.html  print.html  quickstart.html  toc-62020536.js  toc.html
docs/output/ru/guides/: error-handling.html
docs/output/ru/languages/: csharp.html
docs/output/ru/theme/: custom.css
docs/src/: README.md  SUMMARY.md  faq.md  index.md  quickstart.md
docs/src/en/: README.md  SUMMARY.md  c-api.md  faq.md  installation.md  introduction.md
docs/src/en/guides/: error-handling.md  integration.md  performance.md  troubleshooting.md
docs/src/en/languages/: c-cpp.md  csharp.md  nodejs.md  python.md
docs/src/en/rust-api/: README.md  events.md  media-info.md  media-sessions.md  playback-status.md  repeat-mode.md
docs/src/languages/: csharp.md
docs/src/ru/: README.md  SUMMARY.md  c-api.md  index.html  index.md  installation.md  introduction.md  quickstart.md
docs/src/ru/guides/: error-handling.md  integration.md  performance.md  troubleshooting.md
docs/src/ru/languages/: c-cpp.md  csharp.md  nodejs.md  python.md
docs/src/ru/rust-api/: README.md  events.md  media-info.md  media-sessions.md  (+2 more)
docs/src/rust-api/: media-sessions.md  playback-status.md  repeat-mode.md
docs/src/theme/: custom.js
examples/: basic_usage.rs  event_watcher.rs  media-sessions-cli.rs  media_controls.rs  simple_player.rs
guides/: integration.html  performance.html  troubleshooting.html
languages/: c-cpp.html  csharp.html  nodejs.html
rust-api/: events.html  media-info.html  playback-status.html  repeat-mode.html
src/: error.rs  ffi.rs  lib.rs  media_info.rs  media_sessions.rs
src/platform/: backend.rs  linux_backend.rs  macos_backend.rs  mod.rs  windows_backend.rs
tests/: integration.rs
